# Thighs

./: .gitignore  CMakeLists.txt  README.md
shaders/: comp.spv  shader.bat  shader.comp
src/: VulkanManager.cpp  VulkanManager.h  Vulkan_interface.cpp  Vulkan_interface.hpp  Vulkan_mandelbrot_generator.cpp  Vulkan_mandelbrot_generator.hpp  application.cpp  mandelbrot.cpp
